# routes/api.php
@@ -18,6 +18,7 @@ Route::prefix('client')->middleware('client')->group(function () {
     Route::post('token/{user}', Client\UserTokenController::class);
     Route::get('audiences', [Client\ExternalController::class, 'audiences']);
     Route::get('audiences/{audience}/rooms', [Client\ExternalController::class, 'audienceRooms']);
+    Route::post('audiences/{audience}/password/reset', [Client\ExternalController::class, 'resetAudiencePassword']);
     Route::get('actors/{actor}/rooms', [Client\ExternalController::class, 'rooms']);
     Route::get('actors/{actor}/groups', [Client\ExternalController::class, 'groups']);
     Route::post('actors/{actor}/audiences/upsert', [Client\ExternalController::class, 'upsertAudience']);
